<resources>
    <string name="app_name">PushShock</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="device_not_selected">Check device connection</string>
    <string name="device_not_deselected">Device not deselected</string>
    <string name="device_not_connected">Device not connected</string>
    <string name="seekbar_settings_format">Changed: %1$s, value: %2$d</string>

    <!-- Settings labels -->
    <string name="dt">DT:</string>
    <string name="ads_interval">ADS interval:</string>
    <string name="nimpppack">NMPP:</string>
    <string name="np">NP:</string>
    <string name="label_settings_stamp">Временная метка:</string>
    <string name="device_selected">Device %1$s is selected!</string>
    <string name="no_name"><![CDATA[<НЕТ УСТРОЙСТВА>]]></string>
    <string name="no_address"><![CDATA[<НЕТ УСТРОЙСТВА>]]></string>
    <string name="device_deselected">Device %1$s is DEselected!</string>
</resources>
