<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Connected device Info-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/device_info">

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            tools:text="Text"/>

        <TextView
            android:id="@+id/device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            tools:text="Text"
            />
    </LinearLayout>

    <!--Connected device Settings-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/device_settings"
        android:layout_below="@+id/device_info"
        android:layout_alignParentStart="true">
    <TextView
        android:id="@+id/label_settings_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:text="@string/dt"
        />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_settings_dt" />
    <TextView
        android:id="@+id/label_settings_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:text="@string/ads_interval" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar_settings_ads" />
        <TextView
            android:id="@+id/label_settings_nmpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/nimpppack" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar_settings_nmpp" />
        <TextView
            android:id="@+id/label_settings_np"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/np" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar_settings_np" />
        <TextView
            android:id="@+id/label_settings_stamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/label_settings_stamp" />
    </LinearLayout>
</RelativeLayout>